--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,24 +3,37 @@ nav {
     padding: 10px
 }
 
-nav a {
-    color: white;
-    display: block;
-    padding: 20px
+main {
+    max-width: 800px;
+    margin: 0 auto;
 }
 
-h1 {
-    color: darkblue;
+aside {
+    width: 20rem;
+    margin: 1rem auto;
+    border: 1px solid #999;
+    padding: 1rem;
+    background-color: #f5f5f5;
+    color: #222;
 }
 
-img {
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+/* This targets ONLY the profile image inside main */
+main img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
 }
 
 p {
-    padding: 10px;
+    padding: 0;
+}
+
+footer {
+    margin-top: 2rem;
+    border-top: 1px solid #999;
+    text-align: center;
 }
